add_executable(enyx-net-tester
    main.cpp
    CacheLine.hpp
    HandlerAllocator.hpp
    Error.hpp
    Error.cpp
    Size.hpp
    Size.cpp
    Range.hpp
    Socket.hpp
    Socket.cpp
    TcpSocket.hpp
    TcpSocket.cpp
    UdpSocket.hpp
    UdpSocket.cpp
    Statistics.hpp
    Statistics.cpp
    Application.hpp
    Application.cpp
    Executable.hpp
    Executable.cpp
    ApplicationConfiguration.hpp
    SessionConfiguration.hpp
    SessionConfiguration.cpp
    BandwidthThrottle.hpp
    BandwidthThrottle.cpp
    Session.hpp
    Session.cpp
    UdpSession.hpp
    UdpSession.cpp
    TcpSession.hpp
    TcpSession.cpp)

target_link_libraries(enyx-net-tester
    ${Boost_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT})

install(TARGETS
        enyx-net-tester
    DESTINATION
        ${CMAKE_INSTALL_FULL_BINDIR})
